--- a/codingNinjas/Frontend/MusicPlayer/styles/shared.css
+++ b/codingNinjas/Frontend/MusicPlayer/styles/shared.css
@@ -174,6 +174,8 @@ footer{
     4.COMPONENTS:
         4.1 Header Components
         4.2 Footer Components
+        4.3 Main Body:
+            4.3.1 Carousel Section.
 
 =====================================================*/
 
@@ -219,7 +221,7 @@ header > div{
     background-color: var(--color-accent-2-500);
     border-radius: var(--border-radius-200);
 }
-.sr-only {
+.screen-reader-only {
   position: absolute; 
   width: 1px;
   height: 1px;
@@ -329,4 +331,14 @@ footer{
 .quick-links-list-item:hover{
     cursor: pointer;
     color: var(--color-grey-200);
+}
+
+/* 
+    4.3 Main Body:
+        4.3.1 Carousel Section.
+*/
+.carousel-container{
+    height: 300px;
+    min-width: 100%;
+    background-color: red;
 }
