--- a/codingNinjas/Frontend/MusicPlayer/styles/shared.css
+++ b/codingNinjas/Frontend/MusicPlayer/styles/shared.css
@@ -59,6 +59,8 @@
     --border-radius-200:.125rem;
     --border-radius-000:0;
 
+    /* */
+    --play-modal-height: 4rem;
     /* GLOBAL Settings*/
     margin: 0;
     padding: 0;
@@ -187,6 +189,7 @@ footer{
             4.3.7 Genres Section.
             4.3.8 Radio Section.
             4.3.9 Aside Section.
+        4.4 Play Modal Area:
 
 =====================================================*/
 
@@ -299,6 +302,7 @@ footer{
     width: 100%;
     flex-direction: column;
     background-color: var(--color-dark-400);
+    margin-bottom: var(--play-modal-height);
 }
 
 .share-icons-container{
@@ -399,6 +403,9 @@ footer{
     flex-direction: column;
     justify-content: var(--flex-justify-content-local,space-between);
     flex-wrap: var(--flex-wrap-local,nowrap);
+}
+.is-hidden{
+    display: none;
 }
 /* 
     4.3 Main Body:
@@ -696,6 +703,120 @@ ul{
 .carousel_button-next{
     right:+40px;
 }
-.is-hidden{
+
+/*
+    4.4 Play Modal Area:
+*/
+
+#play-modal-container{
+    position: fixed;
+    z-index: 1;
+    bottom: 0;
+    width: 100%;
+    background-color: rgb(182, 22, 22);
+
+    height: var(--play-modal-height);
+    text-align: left;
+}
+#seek-bar{
+    grid-area: seek-bar;
+    background-color: darkgreen;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+}
+#seek-bar:hover{
+    background-color: green;
+}
+#song-info-img{
+    height: 100%;
+    width: var(--play-modal-height);
+    object-fit: cover;
+    object-position: center;
+    grid-area: img;
     display: none;
+}
+#song-info-img img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+#song-title{
+    grid-area: song-title;
+}
+#song-subtitle{
+    grid-area: song-subtitle;
+}
+#play-controls-section{
+    grid-area: play-controls;
+    display: flex;
+    justify-content: space-around;
+    text-align: right;
+}
+
+#play-controls-section .fa-backward,
+#play-controls-section .fa-forward,
+#play-controls-section .fa-volume-mute, 
+#play-controls-section .fa-stop-circle{
+    display: none;
+}
+
+#play-modal-container{
+    display: grid;
+    row-gap: .25rem;
+    align-items: center;
+    padding-bottom: 0;
+    column-gap: .5rem;
+    grid-auto-columns: 1fr;
+    grid-template-columns: 
+        0.125rem        3fr                  1fr             0.125rem;
+    grid-template-areas:
+        "seek-bar       seek-bar            seek-bar        seek-bar"
+        "......         song-title          play-controls   ......."
+        "......         song-subtitle       play-controls   .......";
+}
+
+@media only screen and (min-width:400px) {
+
+    #play-controls-section .fa-stop-circle{
+        display: block;
+    }
+
+    #song-info-img{
+        display: block;
+    }
+
+    #play-modal-container{
+        padding-bottom: 0;
+        column-gap: .125rem;
+        grid-template-columns: 
+            0.25rem     var(--play-modal-height)     2fr     1fr     0.25rem;
+        grid-template-areas:
+            "seek-bar           seek-bar    seek-bar            seek-bar        seek-bar"
+            "......             img         song-title          play-controls   ......"
+            "......             img         song-subtitle       play-controls   ......";
+    }
+}
+
+@media only screen and (min-width:700px) {
+
+    #play-controls-section .fa-backward,
+    #play-controls-section .fa-forward,
+    #play-controls-section .fa-volume-mute{
+        display: block;
+    }
+
+    #play-modal-container{
+        padding-bottom: 0;
+        column-gap: 1rem;
+        row-gap: .25rem;
+        grid-template-columns: 
+            1fr   var(--play-modal-height)   2fr                 3fr             1fr;
+        grid-template-rows: .5rem   1fr    1fr;
+        grid-template-areas:
+            "seek-bar       seek-bar        seek-bar            seek-bar        seek-bar"
+            "......         img             song-title          play-controls   ......."
+            "......         img             song-subtitle       play-controls   .......";
+    }    
 }
