--- a/codingNinjas/Frontend/MusicPlayer/styles/shared.css
+++ b/codingNinjas/Frontend/MusicPlayer/styles/shared.css
@@ -35,6 +35,20 @@
     --color-accent-2-300: hsla(16, 81%, 60%, 1);
     --color-accent-2-200: hsla(16, 81%, 70%, 1);
 
+    /* GRADIENT Colors */
+    --gradient-palettes-1-1-hsla: hsla(264, 18%, 38%, 1);
+    --gradient-palettes-1-2-hsla: hsla(180, 72%, 31%, 1);
+    --gradient-palettes-1-3-hsla: hsla(35, 80%, 65%, 1);
+    --gradient-palettes-1-4-hsla: hsla(16, 62%, 62%, 1);
+    --gradient-palettes-1-5-hsla: hsla(2, 48%, 62%, 1);
+    --gradient: linear-gradient(
+        90deg,
+        var(--gradient-palettes-1-1-hsla),
+        var(--gradient-palettes-1-2-hsla),
+        var(--gradient-palettes-1-3-hsla),
+        var(--gradient-palettes-1-4-hsla),
+        var(--gradient-palettes-1-5-hsla)
+    );
 
     /* FONTS */
     /* FONT STYLES */
@@ -92,7 +106,6 @@ body{
     font-family: var(--font-family-text);
     font-size: var(--font-size-300);
     color: var(--color-white-300);
-    background-color: var(--color-dark-300);
 }
 
 /* Default List style*/
@@ -190,6 +203,7 @@ footer{
             4.3.8 Radio Section.
             4.3.9 Aside Section.
         4.4 Play Modal Area:
+        4.5 Animated Backgrounds:
 
 =====================================================*/
 
@@ -828,4 +842,21 @@ select{
             "......         img             song-title          progress    play-controls   ......."
             "......         img             song-subtitle       progress    play-controls   .......";
     }    
+}
+
+/*
+    4.5 Animated Backgrounds:
+*/
+body{
+    background-image: var(--gradient);
+    background-size: 400%;
+    animation: background-animation 10s infinite alternate;
+}
+@keyframes background-animation {
+    0% {
+        background-position: left;
+    }
+    100% {
+        background-position: right;
+    }
 }
